wellesleynet/roles/k8s/files/guacamole.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: guacamole
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  serviceName: "guacamole"
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
      - image: guacamole/guacd:1.2.0
        imagePullPolicy: Always
        name: guacd
      - image: guacamole/guacamole:1.2.0
        imagePullPolicy: Always
        name: guacamole
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: guacamole-serverconf
          mountPath: /usr/local/tomcat/conf/server.xml
          subPath: server.xml
      - image: postgres:12.5-alpine
        imagePullPolicy: Always
        name: guacamole-postgres
        livenessProbe:
          exec:
            command:
            - ls
            - /var/lib/postgresql/data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: guacamole
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: guacamole-serverconf
        configMap:
          name: guacamole-serverconf
      - name: guacamole
        persistentVolumeClaim:
          claimName: guacamole
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: guacamole
spec:
  selector:
    app: guacamole
  ports:
  - name: guacamole
    port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/app-root: /guacamole
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  rules:
  - host: guac.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: guacamole
            port:
              number: 8080
  tls:
  - hosts:
    - guac.kiski.co
    secretName: guac-kiski-co-tls
